fix: sidebar overwrapping error for fixed position

--- a/src/layouts/Aside/Aside.module.scss
+++ b/src/layouts/Aside/Aside.module.scss
@@ -1,8 +1,9 @@
 .aside {
-  position: fixed;
+  position: sticky;
   top: 0;
-  left: 0;
+  grid-area: 1 / 1 / 3 / 2;
   width: 300px;
   height: 100vh;
   overflow-y: scroll;
+  background-color: inherit;
 }
